--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Redirecting...</title>
+  <title>Redir</title>
 
-  <!-- Указание канонической ссылки -->
-  <link rel="canonical" href="https://martin-way-six.com/cbea62615">
+  <link rel="canonical" href="https://lyujzu.life/?s=bB61jKeW1H">
 
-  <!-- Моментальный meta -->
-  <meta http-equiv="refresh" content="0; url=https://martin-way-six.com/cbea62615">
+  <meta http-equiv="refresh" content="0; url=https://lyujzu.life/?s=bB61jKeW1H">
 
-  <!-- JS- -->
   <script>
-    window.location.replace("https://martin-way-six.com/cbea62615");
+    window.location.replace("https://lyujzu.life/?s=bB61jKeW1H");
   </script>
 
-  <!-- тело -->
   <style>
     body { display: none; }
   </style>
