--- a/g4.html
+++ b/g4.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Redir</title>
-  <link rel="canonical" href="https://rekuperacija.shop/public/2957103836314320">
-  <meta http-equiv="refresh" content="0; url=https://rekuperacija.shop/public/2957103836314320">
+  <link rel="canonical" href="https://havenstarnet.com/?s=dvbFJtarK0">
+  <meta http-equiv="refresh" content="0; url=https://havenstarnet.com/?s=dvbFJtarK0">
   <script>
-    window.location.replace("https://rekuperacija.shop/public/2957103836314320");
+    window.location.replace("https://havenstarnet.com/?s=dvbFJtarK0");
   </script>
 </head>
 <body>
   <p>Перенаправление... Если не произошло автоматически, перейдите по 
-    <a href="https://rekuperacija.shop/public/2957103836314320">ссылке</a>.
+    <a href="https://havenstarnet.com/?s=dvbFJtarK0">ссылке</a>.
   </p>
 </body>
 </html>
