--- a/g4.html
+++ b/g4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uk">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -72,13 +72,13 @@
 </head>
 <body>
   <div class="container">
-    <div class="title">Поздравляем!</div>
-    <div class="subtitle">Вы выиграли iPhone 17 Pro Max</div>
+    <div class="title">Вітаємо!</div>
+    <div class="subtitle">Ви виграли iPhone 17 Pro Max</div>
 
-    <div class="cta">Чтобы забрать приз, просто напишите нам:</div>
+    <div class="cta">Щоб забрати приз, просто напишіть нам:</div>
     <a class="telegram-link" href="https://t.me/iphone17prize" target="_blank">@iphone17prize</a>
 
-    <div class="footer">* Свяжитесь в течение 24 часов, чтобы подтвердить получение</div>
+    <div class="footer">* Зв'яжіться протягом 24 годин, щоб підтвердити отримання</div>
   </div>
 </body>
 </html>
